@@ -926,7 +926,12 @@ parse_app_token(char *token, MWA_REQ_CTXT *rc)
     ap_unescape_url(token);
     status = webauth_token_decode(rc->ctx, WA_TOKEN_APP, token,
                                   rc->sconf->ring, &app);
-    if (status != WA_ERR_NONE) {
+    if (status == WA_ERR_TOKEN_EXPIRED) {
+        ap_log_error(APLOG_MARK, APLOG_INFO, 0, rc->r->server,
+                     "mod_webauth: user credentials (from %s cookie) have"
+                     " expired", app_cookie_name());
+        return 0;
+    } else if (status != WA_ERR_NONE) {
         mwa_log_webauth_error(rc->r->server, status, mwa_func,
                               "webauth_token_decode_app", token);
         return 0;
@@ -935,7 +940,7 @@ parse_app_token(char *token, MWA_REQ_CTXT *rc)
 
     /*
      * Update last-use-time and check inactivity.  If we can't use the app
-     * token due to in activity, clear it out.
+     * token due to inactivity, clear it out.
      */
     status = app_token_maint(rc);
     if (status == 0)
